--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device.width, initial-scale=1.0">
+    <meta name="author" content="Danilo">
+    <meta name="description" content="First html exercise about a London trip">
+    <meta name="keywords" content="Lndra, viaggio">
     <title>Viaggio a Londra</title>
 </head>
 
