--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <header>
         <h1>Il mio Viaggio a Londra</h1>
     </header>
+    <section id="img-london">
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="londra-1">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="londra-2">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="londra-3">
+        <hr>
+    </section>
 </body>
 
 </html>
