--- a/index.html
+++ b/index.html
@@ -20,6 +20,47 @@
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="londra-3">
         <hr>
     </section>
+    <section id="expenses">
+        <h2>Le mie spese</h2>
+        <table>
+            <!-- Intestazione tabella -->
+            <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+            </thead>
+
+            <!-- Corpo tabella -->
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
+            </tbody>
+
+            <!-- Footer tabella -->
+            <tfoot>
+                <tr>
+                    <td colspan="2">Totale</td>
+                    <td>360€</td>
+                </tr>
+            </tfoot>
+        </table>
+        <hr>
+    </section>
 </body>
 
 </html>
