--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
         </table>
         <hr>
     </section>
+
+    <section id="todo-list">
+        <ul>
+            <li>Visitare la Tower of London&#10008;</li>
+            <li>Visitare Greenwich&#10004;</li>
+            <li>Ascoltare un artista di strada a Covent Garden&#10004;</li>
+            <li>Mangiare il tipico Fish and Chips inglese&#10008;</li>
+        </ul>
+        <hr>
+    </section>
 </body>
 
 </html>
