--- a/index.html
+++ b/index.html
@@ -63,12 +63,41 @@
     </section>
 
     <section id="todo-list">
+        <h3>Cose da fare</h3>
         <ul>
             <li>Visitare la Tower of London&#10008;</li>
             <li>Visitare Greenwich&#10004;</li>
             <li>Ascoltare un artista di strada a Covent Garden&#10004;</li>
             <li>Mangiare il tipico Fish and Chips inglese&#10008;</li>
         </ul>
+        <hr>
+    </section>
+
+    <section id="relevant-info">
+        <h3>Info utili:</h3>
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li><strong>999</strong> - Emergenza</li>
+                    <li><strong>101</strong> - Numero polizia</li>
+                    <li><strong>111</strong> - Numero assistenza medica</li>
+                </ul>
+            </li>
+
+            <li>Hotel
+                <ul>
+                    <li><strong>Nome hotel</strong> - Buckingham Palace</li>
+                    <li><strong>Indirizzo hotel</strong> - Westmister, London SW1A 1AA, Regno Unito</li>
+                </ul>
+            </li>
+
+            <li>Aereo
+                <ul>
+                    <li><strong>Volo di Andata</strong> - Y1234X, ore 9:30 da Milano Malpensa</li>
+                    <li><strong>Volo di Ritorno</strong> - Y1236X, ore 18:30 da London Hearthrow</li>
+                </ul>
+            </li>
+        </ol>
         <hr>
     </section>
 </body>
