--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
         </ol>
         <hr>
     </section>
+
+    <section id="pictures">
+        <h3>Le foto</h3>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+            alt="Buckingham Palace">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
+            alt="Tower Bridge">
+    </section>
 </body>
 
 </html>
