--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
 
 <body>
     <header>
+        <!-- Titolo Pagina -->
         <h1>Il mio Viaggio a Londra</h1>
     </header>
+
+
     <section id="img-london">
         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="londra-1">
         <img src="img/pexels-bill-emrich-230794-1.jpg" alt="londra-2">
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="londra-3">
         <hr>
     </section>
+
+    <!-- Sezione Spese -->
     <section id="expenses">
         <h2>Le mie spese</h2>
         <table>
@@ -62,6 +67,7 @@
         <hr>
     </section>
 
+    <!-- Lista cose da fare -->
     <section id="todo-list">
         <h3>Cose da fare</h3>
         <ul>
@@ -73,6 +79,7 @@
         <hr>
     </section>
 
+    <!-- Lista informazioni utili -->
     <section id="relevant-info">
         <h3>Info utili:</h3>
         <ol>
@@ -101,6 +108,7 @@
         <hr>
     </section>
 
+    <!-- Sezione Fotografie -->
     <section id="pictures">
         <h3>Le foto</h3>
         <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
