--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="First html exercise about a London trip">
     <meta name="keywords" content="Lndra, viaggio">
     <title>Viaggio a Londra</title>
+
+    <!-- icona -->
+    <link rel="icon" href="img/logo.jpeg" type="img/jpeg">
 </head>
 
 <body>
